--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,2 +1,3 @@
-h1 Products#index
-p Find me in app/views/products/index.html.slim
+h1 All Customers
+= render partial: 'common/menu'
+= render @products
