--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,3 +1,4 @@
-h1 All Customers
-= render partial: 'common/menu'
-= render @products
+h1 All Products
+.card-deck-wrapper
+  .card-deck
+        = render @products
