--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,8 @@
                   <% end %>
                </div>
             </div>
-            <%= form_tag(root_path, :method => "get", id: "search-form", class:"form-inline my-2 my-lg-0") do %>
-            <%= text_field_tag(:search, params[:search], placeholder: "Search Posts", class: "form-control mr-sm-2") %>
+            <%= form_tag(search_path, :method => "get", id: "search-form", class:"form-inline my-2 my-lg-0") do %>
+            <%= text_field_tag(:search, params[:search], placeholder: "Search Products", class: "form-control mr-sm-2") %>
             <%= submit_tag("Search", class: "btn btn-outline-success my-2 my-sm-0") %>
             <% end %>
          </div>
