Added search errror message.

--- a/app/views/products/search.html.slim
+++ b/app/views/products/search.html.slim
@@ -1,3 +1,7 @@
 h1 Search Results
-.card-columns
-  = render @search_results
+- if @search_results.empty?
+   .no-results
+    P There was no product match.
+- else
+  .card-columns
+    = render @search_results
