--- a/app/views/common/_category_dropdown.html.slim
+++ b/app/views/common/_category_dropdown.html.slim
@@ -1,5 +1,5 @@
 .catgory-dropdown
   = form_tag filter_path, method: 'get' do
     = select_tag :filter, options_from_collection_for_select(@categories, 'id', 'name'), class: "form-control mr-sm-2"
-    = submit_tag 'Filter', class: "btn btn-outline-success my-2 my-sm-0",  name:"commit", value:"Filter"
-    = submit_tag 'Clear Filter', class: "btn btn-outline-success my-2 my-sm-2", name:"commit", value:"Clear Filter"
+    = submit_tag :filter, class: "btn btn-outline-success my-2 my-sm-0",  name:"commit", value:"Filter"
+    = submit_tag :filter, class: "btn btn-outline-success my-2 my-sm-2", name:"commit", value:"Clear Filter"
