Added New Product page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
                   <a class="nav-link" href=<%= sale_path %>>Sale</a>
                </li>
                <li class="nav-item">
+                  <a class="nav-link" href=<%= new_path %>>New</a>
+               </li>
+               <li class="nav-item">
                   <a class="nav-link" href="#">About</a>
                </li>
             </ul>
