Add show action.

--- a/app/views/products/_product.html.slim
+++ b/app/views/products/_product.html.slim
@@ -1,10 +1,11 @@
-.card
-  .card-body
-    h4.card-title
-      = product.name
-  - if product.image.present?
-    = image_tag product.image.name, class: 'card-img-top img-fluid mx-auto d-block'
-  .card-body
-    p.card_text
-      = product.description
+= link_to show_path(product.id)
+  .card
+    .card-body
+      h4.card-title
+        = product.name
+    - if product.image.present?
+      = image_tag product.image.name, class: 'card-img-top img-fluid mx-auto d-block'
+    .card-body
+      p.card_text
+        = product.description
       
