Changed some styling.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,6 +14,16 @@
     }
 }
 
+.card-columns a
+{
+  color: black;
+}
+
+.card-columns a:hover
+{
+  color: grey;
+}
+
 .card-columns {
     @include media-breakpoint-only(lg) {
       column-count: 3;
