--- a/app/views/products/filter.html.slim
+++ b/app/views/products/filter.html.slim
@@ -1,4 +1,5 @@
-h1 Filtered Results
+h1 
+  = "Filtered Result".pluralize(@filter_results.size)
 = render partial: 'common/category_dropdown'
 - if @filter_results.empty?
   .alert.alert-info role="alert" 
