--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -1,4 +1,5 @@
-h1 All Products
+h1 
+  = "All Product".pluralize(@products.size)
 = render partial: 'common/category_dropdown'
 .card-columns
   = render @products
