--- a/app/views/products/search.html.slim
+++ b/app/views/products/search.html.slim
@@ -1,4 +1,5 @@
-h1 Search Results
+h1 
+  = "Search Result".pluralize(@search_results.size)
 - if @search_results.empty?
   .alert.alert-info role="alert" 
     strong Sorry! 
