--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
             </ul>
             </div>
             <%= form_tag(search_path, :method => "get", id: "search-form", class:"form-inline my-2 my-lg-0") do %>
-                <%= select_tag :filter, options_from_collection_for_select(@categories, 'id', 'name', 0), class: "form-control mr-sm-2", :include_blank => 'Shop by Category' %>
+                <%= select_tag :filter, options_from_collection_for_select(@category_list, 'id', 'name', 0), class: "form-control mr-sm-2", :include_blank => 'Shop by Category' %>
                 <%= text_field_tag(:search, params[:search], placeholder: "Search Products", class: "form-control mr-sm-2") %>
                 <%= submit_tag("Search", class: "btn btn-outline-success my-2 my-sm-0") %>
             <% end %>
@@ -39,6 +39,16 @@
             <% end %>
          </div>
       </nav>
+
+      <% if flash[:notice]%>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert" id=id="success-alert">
+        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+      <% end %>
+
       <div class="container">
          <%= yield %>
       </div>
