--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,11 +41,8 @@
       </nav>
 
       <% if flash[:notice]%>
-        <div class="alert alert-warning alert-dismissible fade show" role="alert" id=id="success-alert">
-        <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+        <div class="alert alert-info" role="alert">
+           <%= flash[:notice] %> 
         </div>
       <% end %>
 
