--- a/app/views/authentication/login.html.slim
+++ b/app/views/authentication/login.html.slim
@@ -1,2 +1,4 @@
 h1 Authentication#login
-p Find me in app/views/authentication/login.html.slim
+= bootstrap_form_tag url: '/subscribe' do |f|
+  = f.email_field :email, value: 'name@example.com'
+  = f.submit
