First attempt at implementing login.

--- a/app/views/authentication/login.html.slim
+++ b/app/views/authentication/login.html.slim
@@ -1,4 +1,7 @@
 h1 Authentication#login
-= bootstrap_form_tag url: '/subscribe' do |f|
-  = f.email_field :email, value: 'name@example.com'
-  = f.submit
+= form_tag authentication_authenticate_path, method: 'post' do
+    = bootstrap_form_for(:account) do |f|
+        = f.email_field :email
+        = f.password_field :password
+        = f.check_box :remember_me
+        = f.submit "Log In"
