--- a/app/views/authentication/sign_up.html.slim
+++ b/app/views/authentication/sign_up.html.slim
@@ -1,2 +1,7 @@
-h1 Authentication#sign_up
-p Find me in app/views/authentication/sign_up.html.slim
+h1 Sign up
+= form_tag authentication_create_path, method: 'post' do
+    = bootstrap_form_for(:params) do |f|
+        / = f.select :province, options_from_collection_for_select(@provinces, 'id', 'name')
+        = f.email_field :email, class: "input-lg"
+        = f.password_field :password, class: "input-lg"
+        = f.submit "Create account", class: "btn btn-block btn-lg btn-primary"
