--- a/app/views/authentication/login.html.slim
+++ b/app/views/authentication/login.html.slim
@@ -1,6 +1,6 @@
-h1 Authentication#login
+h1 Login
 = bootstrap_form_tag url: '/authentication/authenticate' do |f|
   = f.email_field :email, value: 'name@example.com'
   = f.password_field :password, class: "input-lg"
   = f.submit "Log in", class: "btn btn-block btn-lg btn-primary"
-
+= link_to "Don't have an account, sign up!", authentication_sign_up_path, class: "btn btn-block btn-sm btn-secondary"
