--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,18 @@
                </li>
             </ul>
             </div>
+            
             <%= form_tag(search_path, :method => "get", id: "search-form", class:"form-inline my-2 my-lg-0") do %>
                 <%= select_tag :filter, options_from_collection_for_select(@category_list, 'id', 'name', 0), class: "form-control mr-sm-2", :include_blank => 'Shop by Category' %>
                 <%= text_field_tag(:search, params[:search], placeholder: "Search Products", class: "form-control mr-sm-2") %>
                 <%= submit_tag("Search", class: "btn btn-outline-success my-2 my-sm-0") %>
             <% end %>
-                <%= form_tag(cart_path, :method => "get", class:"form-inline my-2 my-lg-0") do %>
+            <% if customer_signed_in? %>
+                <% path = cart_path %>
+            <% else %>
+                <% path = authentication_login_path %>
+            <% end %>
+            <%= form_tag(path, :method => "get", class:"form-inline my-2 my-lg-0") do %>
                 <%= submit_tag("Cart", class: "btn btn-outline-success my-2 my-sm-0") %>
             <% end %>
          </div>
@@ -47,6 +53,7 @@
       <% end %>
 
       <div class="container">
+      <%= customer_signed_in? %>
          <%= yield %>
       </div>
    </body>
