Finishing up work on the Checkout page.

--- a/app/views/charges/create.html.slim
+++ b/app/views/charges/create.html.slim
@@ -1,4 +1,4 @@
 h2
-  | Thanks, you paid 
-  strong= number_to_currency(@charge.amount / 100)
+  | Thank you for your purchase, you paid 
+  strong= number_to_currency(@charge.amount / 100.0)
     
