Finishing up work on the Authentication pages.

--- a/app/views/authentication/sign_up.html.slim
+++ b/app/views/authentication/sign_up.html.slim
@@ -1,6 +1,6 @@
 h1 Sign up
 = bootstrap_form_tag url: '/authentication/create' do |f|
-  = f.select :province, options_from_collection_for_select(@provinces, 'id', 'name')
-  = f.email_field :email, value: 'name@example.com'
-  = f.password_field :password, class: "input-lg"
+  = f.select :province, options_from_collection_for_select(@provinces, 'id', 'name', 0)
+  = f.email_field :email, :required => true
+  = f.password_field :password, :required => true, class: "input-lg"
   = f.submit "Create account", class: "btn btn-block btn-lg btn-primary"
