--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,7 @@
                 <%= text_field_tag(:search, params[:search], placeholder: "Search Products", class: "form-control mr-sm-2") %>
                 <%= submit_tag("Search", class: "btn btn-outline-success my-2 my-sm-0") %>
             <% end %>
-            <% if customer_signed_in? %>
-                <% path = cart_path %>
-            <% else %>
-                <% path = authentication_login_path %>
-            <% end %>
-            <%= form_tag(path, :method => "get", class:"form-inline my-2 my-lg-0") do %>
+            <%= form_tag(cart_path, :method => "get", class:"form-inline my-2 my-lg-0") do %>
                 <%= submit_tag("Cart", class: "btn btn-outline-success my-2 my-sm-0") %>
             <% end %>
          </div>
