Working on the Cart page.

--- a/app/views/products/cart.html.slim
+++ b/app/views/products/cart.html.slim
@@ -26,6 +26,8 @@ h1 Shopping Cart
                 = submit_tag :remove, class: "btn btn-outline-success my-2 my-sm-2", name:"commit", value:"-"
         = form_tag edit_quantity_product_path(product), class:"form-inline my-2 my-lg-0", method: 'post' do
             = submit_tag "Remove from cart", class: "btn btn-outline-success my-2 my-sm-2", name:"commit"
+  .sidebar-wrapper
+    = render partial: 'order'
 - else
   .alert.alert-info role="alert"  
     | Your cart is empty.
