--- a/app/views/charges/new.html.slim
+++ b/app/views/charges/new.html.slim
@@ -6,4 +6,4 @@
     label.amount
       span
         | Amount: #{number_to_currency(@amount / 100.0)}
-  script.stripe-button data-amount="#{@amount}" data-description="#{@description}" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" src="https://checkout.stripe.com/checkout.js" 
+  script.stripe-button data-amount="#{@amount}" data-email ="#{@email}", data-description="#{@description}" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" src="https://checkout.stripe.com/checkout.js" 
