--- a/app/views/products/checkout.html.slim
+++ b/app/views/products/checkout.html.slim
@@ -43,7 +43,7 @@ hr/
     - if flash[:error].present?
       #error_explanation
         p= flash[:error]
-  script.stripe-button data-amount="#{@grand_total}" data-description="#{@description}" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" src="https://checkout.stripe.com/checkout.js" 
+  script.stripe-button data-amount="#{@grand_total}" data-email ="#{@email}" data-description="#{@description}" data-key="#{Rails.configuration.stripe[:publishable_key]}" data-locale="auto" src="https://checkout.stripe.com/checkout.js" 
 hr/
 = form_tag cart_url, method: 'get' do
   = submit_tag "Back to cart", class: "btn btn-success"
