Completed adding sale display to each page.

--- a/app/views/products/show.html.slim
+++ b/app/views/products/show.html.slim
@@ -15,6 +15,11 @@ h1 View Product
             = @product.description
           hr/  
           .product-price
+            -if @sale_items.find_by_id(@product.id).present?
+              |  Discount: 
+              = @sale_items.find(@product.id).discount_percent
+              | %
+            br/  
             | $ #{@product.price}
           - if @product.stock_quantity > 0
             .product-stock In Stock
