Fix search code.

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -58,6 +58,6 @@
     -webkit-transition: all .2s ease-in;
   }
   
-  .service-image-left > center > img{
+  .service-image-left > img{
     max-height: 400px;
   }
