--- a/app/views/charges/create.html.slim
+++ b/app/views/charges/create.html.slim
@@ -1,8 +1,6 @@
-h4
-  | Thank you for your purchase.
-h4
-  | Your order will ship momentarily.
-h4
+h5
+  | Thank you for your purchase. Your order will ship momentarily.
+h5
   | Your Total was: 
   strong= number_to_currency(@charge.amount / 100.0)
 = form_tag root_url, method: 'get' do
