Clean up project.

--- a/app/views/authentication/login.html.slim
+++ b/app/views/authentication/login.html.slim
@@ -3,4 +3,4 @@ h1 Login
   = f.email_field :email, value: 'name@example.com'
   = f.password_field :password, :required => true, class: "input-lg"
   = f.submit "Log in", class: "btn btn-block btn-lg btn-primary"
-= link_to "Don't have an account, sign up!", authentication_sign_up_path, class: "btn btn-block btn-sm btn-secondary"
+= link_to "Don't have an account, sign up here", authentication_sign_up_path, class: "btn btn-block btn-sm btn-secondary"
